package com.tetras.application;

import com.tetras.librairie.MachineACafe;

public class MaMachineACafe implements MachineACafe {

}