package com.tetras.application;

public class MachineACafe {

}