@startuml Singleton

skinparam class {
    BackgroundColor<<librairie>> #9bca9d
    BackgroundColor<<application>> #0bca9d
}

package "com.tetras.librarie" #9bca0d {
    interface MachineACafe <<librairie>> 

    class GestionMachineACafe <<librairie>> {
        - machine: MachineACafe
    }
}

package "com.tetras.application" #0bca0d {
    class MaMachineACafe <<application>> 
    class Application <<application>> {
        - gestionnaire: GestionMachineACafe
    }
}

MaMachineACafe ..|> MachineACafe

Application o-- GestionMachineACafe
GestionMachineACafe o-- MachineACafe

@enduml